email-template.html v2 has been developed

--- a/email-template-v2.html
+++ b/email-template-v2.html
@@ -1,25 +1,15 @@
-<! DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
-        xmlns:o="urn:schemas-microsoft-com:office:office">
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="format-detection" content="telephone=no">
 
-    <head>
-        <!--[if gte mso 9]><xml>
-    <o:OfficeDocumentSettings>
-    <o:AllowPNG />
-    <o:PixelsPerInch>96</o:PixelsPerInch>
-    </o:OfficeDocumentSettings>
-    </xml><![endif]-->
-        <title>Unity Islamic Center</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
-        <meta name="format-detection" content="telephone=no">
-        <!--[if !mso]><!-->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-        <!--<![endif]-->
-<!--        <link href="css/emailtemplate.css" rel="stylesheet" />-->
-<!--        <link href="css/receipt.css" rel="stylesheet" />-->
+    <title>Unity Islamic Center</title>
+
     </head>
 
     <body class="em_body" style="margin:0px;background: #efefef;padding-top:50px;padding-bottom: 100px">
@@ -119,52 +109,6 @@
                                                             <td style="padding-top:8px;padding-bottom: 8px;">200</td>
                                                         </tr>
                                                         </table>
-
-<!--                                                        <table style="border:0px;width:100%;margin-top:15px;" class="table-receipt">-->
-<!--                                                            <tr>-->
-<!--                                                                <td colspan="2"><p style="font-size: 18px; font-weight: bold;border-bottom:1px solid;margin-bottom: 10px;">Transaction Receipt:</p></td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Receipt Rerefence:</td>-->
-<!--                                                                <td>[transaction_id]</td>-->
-<!--                                                            </tr>-->
-
-<!--                                                            <tr>-->
-<!--                                                                <td>Date:</td>-->
-<!--                                                                <td>[transaction_date]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Payment Method</td>-->
-<!--                                                                <td>[payment_method]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Name:</td>-->
-<!--                                                                <td>[name_on_card]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Address</td>-->
-<!--                                                                <td>[address]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Email Address:</td>-->
-<!--                                                                <td>[email_address]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Phone Number:</td>-->
-<!--                                                                <td>[phone_number]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Memo</td>-->
-<!--                                                                <td>[memo]</td>-->
-<!--                                                            </tr>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Frequency:</td>-->
-<!--                                                                <td>[frequency]</td>-->
-<!--                                                            <tr>-->
-<!--                                                                <td>Amount</td>-->
-<!--                                                                <td>[amount]</td>-->
-<!--                                                            </tr>-->
-<!--                                                        </table>-->
                                                     </td>
                                                 </tr>
                                         </table>
@@ -174,8 +118,8 @@
 
                                 <!-- foot note -->
                                 <tr>
-                                    <td style="padding:20px 20px 25px;background: #e1e1e1;border-top:1px solid #f2f2f2;font-family: 'Open Sans', Arial, sans-serif;" class="em_padd" valign="top" align="center">
-                                        <p style="font-size: 14px;text-align: left;line-height: 22px;">
+                                    <td align="center" style="padding:20px 20px 25px;background: #e1e1e1;border-top:1px solid #f2f2f2;font-family: 'Open Sans', Arial, sans-serif;">
+                                        <p style="font-size: 14px;text-align: left;line-height: 22px;margin: 0">
                                             We appreciate your generousity. Please send us an email to <span style="text-decoration: underline;">admin@unityislamiccenter.org</span> with any questions, comments or concerns.
                                         </p>
                                     </td>
@@ -204,17 +148,12 @@
                                         </table>
                                     </td>
                                 </tr>
-                                <!--<tr>
-                                    <td class="em_hide" style="line-height:1px;min-width:700px;background-color:#ffffff;"><img alt="" src="images/spacer.gif" style="max-height:1px; min-height:1px; display:block; width:700px; min-width:700px;" width="700" border="0" height="1"></td>
-                                </tr>-->
+
                             </tbody>
                         </table>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <div class="em_hide" style="white-space: nowrap; display: none; font-size:0px; line-height:0px;">&nbsp; &nbsp;
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
     </body>
-
     </html>
