email template updated

--- a/email-template-v2.html
+++ b/email-template-v2.html
@@ -28,7 +28,7 @@
                             <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                                 <tbody>
                                 <tr>
-                                    <td align="center" style="padding-top:15px;padding-bottom:15px;">
+                                    <td align="center" style="padding-top:10px;padding-bottom:10px;">
                                         <img alt="Unity Islamic Center"
                                              style="display:block; margin:0; max-width:600px;max-height: 120px;"
                                              src="https://secure-api.net/resources//362478_logo_web_unity_islamic_center_jpg.jpg">
@@ -49,12 +49,25 @@
                                 <!-- body top section -->
                                 <thead>
                                 <tr>
-                                    <td style="padding-bottom: 15px;">
-                                        <p style="text-align: center;margin:0;margin-bottom:15px;">
+                                    <td style="padding-bottom: 0px;">
+                                        <p style="text-align: center;margin:0;">
                                             <img src="https://res.cloudinary.com/secure-api/image/upload/v1668662013/secure-api/Secure-api/images/exvyd790nmhuhpab0y9g.png" style="width: 50px;margin:0;" alt="success">
                                         </p>
                                         <p style="margin:0;font-size:20px; font-weight: bold; text-align: center; line-height: 32px;">
                                             Your donation to the Unity Islamic Center has been processed successfully.
+                                        </p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: center">
+                                        <span style="width:130px;height:3px;background-color:#26c58b;display: inline-block"></span>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td style="padding-top:6px;background: #ffffff;font-family: 'Open Sans', Arial, sans-serif;">
+                                        <p style="font-size: 16px;text-align: center;line-height: 28px;margin: 0">
+                                            The donations to MasjidSolutions are tax exempt under section 501(c)(3) of the Internal Revenue Code. Federal Tax Id 45-xxxxxxx.
                                         </p>
                                     </td>
                                 </tr>
@@ -64,10 +77,10 @@
                                 <!-- receipt body -->
                                 <tbody>
                                 <tr valign="top" align="center">
-                                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:16px;line-height:28px;margin-top:15px;">
-                                        <table style="border:0px;width:100%;margin-top:15px;" class="table-receipt">
+                                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:16px;line-height:28px;">
+                                        <table style="border:0px;width:100%;margin-top:10px;" class="table-receipt">
                                             <tr>
-                                                <td colspan="2"><p style="font-size: 18px; font-weight: bold;border-bottom:1px solid;margin-bottom: 10px;">Transaction Receipt:</p></td>
+                                                <td colspan="2"><p style="font-size: 18px; font-weight: bold;border-bottom:1px solid;margin:0;margin-bottom: 10px;">Transaction Receipt:</p></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding-top:8px;padding-bottom: 8px;border-bottom:1px solid #f2f2f2;">Receipt Rerefence:</td>
