email template for IOST has been created

--- a/template-iost.html
+++ b/template-iost.html
@@ -12,7 +12,7 @@
                                 <tbody>
                                 <tr>
                                     <td align="center" style="padding-top:10px;padding-bottom:10px;">
-                                        <img alt="Secure Api" style="display:block; margin:0; max-width:600px;max-height: 120px;" src="https://res.cloudinary.com/secure-api/image/upload/v1672914571/secure-api/fia/images/oxpns3uyn2pajrrvruzb.png">
+                                        <img alt="Secure Api" style="display:block; margin:0; max-width:600px;max-height: 120px;" src="https://res.cloudinary.com/secure-api/image/upload/v1677150191/secure-api/iost/images/dnjoupvcwaqyuivo3ia2.png">
                                     </td>
                                 </tr>
                                 </tbody>
@@ -33,7 +33,7 @@
                                             <img src="https://res.cloudinary.com/secure-api/image/upload/v1668662013/secure-api/Secure-api/images/exvyd790nmhuhpab0y9g.png" style="width: 50px;margin:0;" alt="success">
                                         </p>
                                         <p style="margin:0;font-size:20px; font-weight: bold; text-align: center; line-height: 32px;">
-                                            Your donation to the Fredericton Islamic Association has been processed successfully.
+                                            Your donation to the Islamic Organization of the Southern Tier has been processed successfully.
                                         </p>
                                     </td>
                                 </tr>
@@ -42,6 +42,16 @@
                                         <span style="width:130px;height:3px;background-color:#26c58b;display: inline-block"></span>
                                     </td>
                                 </tr>
+                                <!-- <tr>
+                                    <td
+                                        style="padding-top:6px;background: #ffffff;font-family: 'Open Sans', Arial, sans-serif;">
+                                        <p
+                                            style="font-size: 16px;text-align: center;line-height: 28px;margin: 0">
+                                            Donations to Islamic Organization of the Southern Tier are tax exempt under section
+                                            501(c)(3) of the Internal Revenue Code. Federal Tax Id 10-952919
+                                        </p>
+                                    </td>
+                                </tr> -->
                                 </thead>
 
 
@@ -128,12 +138,11 @@
 
                     <!-- foot note -->
                     <tr>
-                        <td align="center" style="padding:15px 20px 15px;background: #e1e1e1;border-top:1px solid #f2f2f2;font-family: 'Open Sans', Arial, sans-serif;">
-                            <p style="font-size: 14px;text-align: left;line-height: 22px;">
-                                We appreciate your generosity. Please email us to <a href="mailto:frederictonislamicassociation@gmail.com" style="text-decoration: underline;">frederictonislamicassociation@gmail.com</a> with any questions, comments or concerns.
+                        <td align="center" style="padding:20px 20px 25px;background: #e1e1e1;border-top:1px solid #f2f2f2;font-family: 'Open Sans', Arial, sans-serif;">
+                            <p style="font-size: 14px;text-align: left;line-height: 22px;margin: 0">
+                                We appreciate your generosity. Please call us at <a href="tel:607-729-7265">607-729-7265</a> or email us to <a href="mailto:office@iost.org">office@iost.org</a>
+                                with any questions, comments or concerns.
                             </p>
-                            <p style="font-size: 14px; padding-top:10px;text-align: left; border-top:1px solid;margin-bottom:0;">Fredericton Islamic Association is a tax exempt organization under section 501(c)(3) of Internal Revenue Code.</p>
-                            <p style="margin-top:10px;margin-bottom:0;font-size:14px;text-align: left;"><strong>Employer Idenfication Number: </strong> 888228376RR0001</p>
                         </td>
                     </tr>
                     <!--Footer Section-->
@@ -143,9 +152,10 @@
                                 <tbody>
                                 <tr>
                                     <td style="font-family:'Open Sans', Arial, sans-serif; padding-bottom: 20px; font-size:14px; line-height:22px; color:#ffffff;text-align: center;">
-                                        Fredericton Islamic Association <br />
-                                        130 Lincoln Rd, Fredericton, E3B 2A3 <br />
-                                        New Brunswick, Canada<br>
+                                        161 Grand Avenue, Johnson City, <br>
+                                        New York, 13790 <br>
+                                        Phone: <a href="tel:607-729-7265" style="color:#2196f3;font-weight: 600">607-729-7265</a> <br>
+                                        Email: <a href="mailto:office@iost.org" style="color:#2196f3;font-weight: 600">office@iost.org</a><br>
                                     </td>
                                 </tr>
 
