--- a/email-template-v2.html
+++ b/email-template-v2.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="em_body" style="margin:0px;padding-top:50px;padding-bottom: 100px">
+<body>
 
 <div style="background-color:#efefef">
     <table valign="top" bgcolor="#efefef" align="center">
