--- a/book-symposium-template-v2.html
+++ b/book-symposium-template-v2.html
@@ -194,7 +194,8 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                     <tbody>
                                         <tr>
-                                            <td style="padding:20px 20px 25px;font-family: 'Open Sans', Arial, sans-serif;">
+                                            <td style="padding:20px 20px 10px;font-family: 'Open Sans', Arial, sans-serif;text-align: left;"
+                                                width="564">
                                                 <p>
                                                     <a href="https://secure-api.net/v/Go/bzb0pood"
                                                         style="color:#ffffff;background-color: #009146;font-size: 18px;text-decoration: none;font-weight: bold;padding: 10px 15px;border-radius: 4px;display: inline-block;">
@@ -226,8 +227,8 @@
                                 <table width="100%" cellspacing="0" cellpadding="0" border="0">
                                     <tbody>
                                         <tr>
-                                            <td
-                                                style="font-family:'Open Sans', Arial, sans-serif; padding:20px;border-top:2px solid #dddddd; line-height:22px;">
+                                            <td style="padding:10px 20px 15px 20px;font-family: 'Open Sans', Arial, sans-serif;text-align: left;border-top: 2px solid #ddd;"
+                                                width="564">
                                                 <p style="font-size: 16px;line-height: 26px;">
                                                     Thank you <br />
                                                     <strong>AL-ILM Support Team</strong> <br />
